--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>YoutubeNg</title>
+  <title>YouTube - Ng</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link 
+  rel="icon" 
+  type="image/x-icon" 
+  href="https://www.youtube.com/s/desktop/d4eb50c8/img/favicon.ico">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <app-root></app-root>
