--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root class="content"></app-root>
 </body>
 </html>
